<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_sounds_header">
        <SwitchPreference
            app:key="button_sounds"
            app:title="@string/settings_sounds_header"
            app:enabled="true"
            android:defaultValue="false"
            />
        <SwitchPreference
            app:key="menu_sounds"
            app:title="@string/settings_switch_menu_sounds"
            app:enabled="true"
            android:defaultValue="false"
            />

        <SwitchPreference
            app:key="game_sounds"
            app:title="@string/settings_switch_game_sounds"
            app:enabled="true"
            android:defaultValue="false"
            />

        <SwitchPreference
            app:key="action_sounds"
            app:title="@string/settings_switch_action_sounds"
            app:enabled="true"
            android:defaultValue="false"
            />
    </PreferenceCategory>


</PreferenceScreen>