<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="18dp"
    android:layout_marginBottom="2dp"
    android:layout_marginHorizontal="18dp"
    app:layout_constraintWidth_max="240dp"
    android:id="@+id/startButtonsLayout"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:minWidth="@dimen/menu_button_min_width"
        android:text="@string/button_new_game"
        android:id="@+id/newGameButton"
        style="?attr/menu_button_style"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:minWidth="@dimen/menu_button_min_width"
        android:text="@string/button_options"
        android:id="@+id/optionsButton"
        style="?attr/menu_button_style"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:minWidth="@dimen/menu_button_min_width"
        android:text="@string/button_about"
        android:id="@+id/aboutButton"
        style="?attr/menu_button_style"/>

</LinearLayout>