<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/instructions_background">


    <View
        android:id="@+id/instructionDot1"
        android:padding="12dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="24dp"
        android:foregroundGravity="center"
        android:clipToPadding="false"
        android:tag="dot"
        android:background="@drawable/shape_instruction_pointer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/instructionText1"/>


    <TextView
        android:id="@+id/instructionText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_1"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:textColor="@color/instructions_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/instructionDot2"
        android:padding="12dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="24dp"
        android:foregroundGravity="center"
        android:clipToPadding="false"
        android:tag="dot"
        android:background="@drawable/shape_instruction_pointer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/instructionText2"/>

    <TextView
        android:id="@+id/instructionText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_2"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:textColor="@color/instructions_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <View
        android:id="@+id/instructionDot3"
        android:padding="12dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="24dp"
        android:foregroundGravity="center"
        android:clipToPadding="false"
        android:tag="dot"
        android:background="@drawable/shape_instruction_pointer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/instructionText3"/>


    <TextView
        android:id="@+id/instructionText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_3"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:textColor="@color/instructions_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <View
        android:id="@+id/instructionDot4"
        android:padding="12dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="24dp"
        android:foregroundGravity="center"
        android:clipToPadding="false"
        android:tag="dot"
        android:background="@drawable/shape_instruction_pointer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/instructionText4"/>


    <TextView
        android:id="@+id/instructionText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_4"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:textColor="@color/instructions_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionGroup1"
        app:constraint_referenced_ids="instructionDot1,instructionText1" />


    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionGroup2"
        app:constraint_referenced_ids="instructionDot2,instructionText2" />


    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionGroup3"
        app:constraint_referenced_ids="instructionDot3,instructionText3" />


    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionGroup4"
        app:constraint_referenced_ids="instructionDot4,instructionText4" />
</androidx.constraintlayout.widget.ConstraintLayout>

