<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:background="@drawable/background_1"
    android:gravity="center"
    android:tileMode="mirror"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topOfHighScoreGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <TextView
        android:id="@+id/gameOverTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/game_over_text"
        android:layout_marginVertical="20dp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="@dimen/game_over_text_size"
        app:autoSizeMaxTextSize="@dimen/game_over_max_text_size"
        app:autoSizeStepGranularity="2sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/game_over_text"
        android:background="@color/heading_text_background"
        app:layout_constraintTop_toBottomOf="@id/topOfHighScoreGuideline"
        app:layout_constraintBottom_toTopOf="@id/bottomOfHighScoreGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.30" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomOfHighScoreGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />


    <LinearLayout
        android:id="@+id/finalScoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/background_final_score"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverTextView"
        app:layout_constraintVertical_bias="0.30">


        <TextView
            android:id="@+id/yourScoreTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="1"
            android:shadowDy="15"
            android:shadowRadius="2"
            android:text="@string/game_over_score_text"
            android:textAlignment="center"
            android:textColor="@color/score_text_top"
            android:textSize="28sp"
            app:layout_constraintVertical_bias="0.32" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="1"
            android:shadowDy="15"
            android:shadowRadius="2"
            android:text="@string/score_placeholder_text"
            android:textAlignment="center"
            android:textColor="@color/score_text_top"
            android:textSize="@dimen/game_over_score_text_size" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>